Reduce navbar spacing to avoid overflow on small screens.

--- a/source/style/main.css
+++ b/source/style/main.css
@@ -133,8 +133,8 @@ nav {
     font-weight: 600;
     display: flex;
     padding-block: 0.5rem;
-    padding-inline: 2rem;
-    gap: 2rem;
+    gap: 1em;
+    justify-content: space-evenly;
     border-bottom: 1px solid var(--text-color-2);
 }
 
